	  keysym bindings) before invoking the hook.
	- the tabbed extension now properly refreshes the active tab
	  on a key press when the mouse pointer is outside the terminal
	  window.
	- add 'lookup_keysym' perl method to lookup the action bound
	  to a key combination.
	- a key combination bound to 'matcher:select' can now be used
	  to cycle through the matches in matcher.

9.21 Wed Dec 31 14:50:03 CET 2014
	- the "moa redraw 8-bit british vintage colour management" release.
	- NOTICE: this release updates terminfo.
	- fix pixel droppings on overdraw when a secondary core font has the
          same height but different ascent.
        - implement cvvis in terminfo as blinking cursor, to distinguish it
          from cnorm (emacs uses cvvis which is commonly a blinking cursor).
        - when xft support was compiled in, colour queries erroneously returned
          premultiplied values, this also affected internal queries, for example
          when calculating faded colour. alpha is now divided out when possible,
          which is more correct but loses colour resolution.
	- add DECSCUSR xterm extension to set the cursor to a vertical bar.
	- add 'extension:string' action, and associated on_action perl
	  hook, for keysym resources that invokes actions provided by
	  perl extensions. The 'perl:string' action and
	  on_user_command hook are deprecated but still supported.
	- add 'builtin-string' action for keysym resources that restores string
	  mappings for keys that have predefined actions in urxvt.
	- add -k option to urxvtc for killing the daemon process.
        - document urxvtd's -e/--eval option that was implemented in 9.16,
          but not documented.
	- add -dockapp option to make the wm treat urxvt as a dockapp.
	- add -mc option and multiClickTime resource to set the maximum time
	  between multi-click select events (patch by Joe Peterson).
	- new 'eval' extension to evaluate arbitrary perl code with keysym